--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -7,7 +7,7 @@
     <h1>YourModel List</h1>
     <ul>
         {% for object in objects %}
-            <li><a href="{% url 'detail' object.id %}">{{ object.name }}</a></li>
+            <li><a href="{% url 'detail' object.name %}">{{ object.name }}</a></li>
         {% endfor %}
     </ul>
 </body>
