--- a/diaryapp/templates/diaryapp/detail_diary.html
+++ b/diaryapp/templates/diaryapp/detail_diary.html
@@ -7,18 +7,19 @@
 </head>
 <body>
     <h1>{{ diary.diarytitle }}</h1>
+    <p><strong>Place:</strong> {{ diary.place }}</p>
+    <p><strong>Withfriend:</strong> {{ diary.withfriend }}</p>
     <p><strong>Emotion:</strong> {{ diary.emotion }}</p>
     <p><strong>Content:</strong> {{ diary.content }}</p>
-    <p><strong>Place:</strong> {{ diary.place }}</p>
     <p><strong>Created at:</strong> {{ diary.created_at }}</p>
 
     {% if diary.representative_image %}
-        <img src="data:image/png;base64,{{ diary.representative_image.image_file }}" alt="Representative Image">
+        <img src="data:image/png;base64,{{ diary.representative_image.image_file }}" alt="Representative Image" width="150">
     {% endif %}
 
     {% for image in diary.images.all %}
         {% if not image.is_representative %}
-            <img src="data:image/png;base64,{{ image.image_file }}" alt="Diary Image">
+            <img src="data:image/png;base64,{{ image.image_file }}" alt="Diary Image" width="150">
         {% endif %}
     {% empty %}
         No images available
