--- a/diaryapp/templates/diaryapp/write_diary.html
+++ b/diaryapp/templates/diaryapp/write_diary.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Write Diary</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-     <script>
+    <script>
         $(document).ready(function() {
             $('#generate-button').click(function(event) {
                 event.preventDefault();
@@ -23,17 +23,62 @@
                     }
                 });
             });
+
+            $('#ai-button').click(function() {
+                $('#emotion-field').show();
+            });
+
+            $('#diary-form').submit(function(event) {
+                var emotionFieldVisible = $('#emotion-field').is(':visible');
+                var emotionValue = $('#id_emotion').val();
+
+                if (emotionFieldVisible && emotionValue) {
+                    this.action = "{% url 'generate_diary' %}";
+                } else {
+                    this.action = "{% url 'write_diary' %}";
+                }
+            });
         });
-     </script>
+    </script>
 </head>
 <body>
     <h1>Write Diary</h1>
     <form id="diary-form" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+
+        <p>
+            <label for="id_diarytitle">일기 제목:</label>
+            {{ form.diarytitle }}
+        </p>
+        <p>
+            <label for="id_place">장소:</label>
+            {{ form.place }}
+        </p>
+        <p>
+            <label for="id_withfriend">친구와 함께:</label>
+            {{ form.withfriend }}
+        </p>
+        <p>
+            <label for="id_content">내용:</label>
+            {{ form.content }}
+        </p>
+        <p>
+            <label for="id_repreimg">대표이미지:</label>
+            {{ form.image_file }}
+        </p>
+
+
+        <button type="button" id="ai-button">AI로 작성하기</button>
+        <div id="emotion-field" style="display: none;">
+            <label for="id_emotion">감정:</label>
+            {{ form.emotion }}
+        </div>
+
+
         {{ image_form.as_p }}
+
+
         <button type="submit">일기 작성</button>
-        <button id="generate-button">AI가 일기 써주기</button>
     </form>
     <!-- 일기 리스트 링크 -->
     <button id="list-button">
