--- a/diaryapp/templates/diaryapp/update_diary.html
+++ b/diaryapp/templates/diaryapp/update_diary.html
@@ -45,11 +45,11 @@
 <!--        <label for="id_content">Content:</label>-->
 <!--        <textarea id="id_content" name="content">{{ diary.content }}</textarea>-->
 <!--<br/>-->
-            <p>{{ form.diarytitle }}</p>
-            <p>{{ form.place }}</p>
-            <p>{{ form.withfriend }}</p>
-            <p>{{ form.emotion }}</p>
-            <p>{{ form.content }}</p>
+            <p><label for="id_diarytitle">제목: </label>{{ form.diarytitle }}</p>
+            <p><label for="id_diarytitle">장소: </label>{{ form.place }}</p>
+            <p><label for="id_diarytitle">함께 간 친구: </label>{{ form.withfriend }}</p>
+            <p><label for="id_diarytitle">감정: </label>{{ form.emotion }}</p>
+            <p><label for="id_diarytitle">일기: </label>{{ form.content }}</p>
 <br/>
         <label for="id_new_representative_image">Upload Representative Image:</label>
         <input type="file" id="id_new_representative_image" name="image_file">
