--- a/diaryapp/templates/diaryapp/detail_diary.html
+++ b/diaryapp/templates/diaryapp/detail_diary.html
@@ -9,6 +9,7 @@
         <h1>{{ diary.diarytitle }}</h1>
         <p><strong>Place:</strong> {{ diary.place }}</p>
         <p><strong>Withfriend:</strong> {{ diary.withfriend }}</p>
+        <!--태그된 사용자를 보여주는 게 필요함-->
         <p><strong>Content:</strong> {{ diary.content }}</p>
         <p><strong>Created at:</strong> {{ diary.created_at }}</p>
 
@@ -36,10 +37,5 @@
             {% csrf_token %}
             <input type="submit" value="삭제하기">
         </form>
-
-        <!--댓글 작성 폼 추가-->
-
-
-        <!-- 댓글 리스트 폼 추가 -->
     </body>
 </html>
