--- a/diaryapp/templates/diaryapp/user_list_diary.html
+++ b/diaryapp/templates/diaryapp/user_list_diary.html
@@ -20,6 +20,16 @@
             <li>No diaries found.</li>
         {% endfor %}
     </ul>
+
+<!--        &lt;!&ndash; diary_list.html &ndash;&gt;-->
+<!--    <h2>내 다이어리와 태그된 다이어리</h2>-->
+<!--    <ul>-->
+<!--        {% for diary in diaries %}-->
+<!--            <li>{{ diary.title }}</li>-->
+<!--            &lt;!&ndash; 원하는 다이어리의 정보 표시 &ndash;&gt;-->
+<!--        {% endfor %}-->
+<!--    </ul>-->
+
     <!-- 일기 작성 화면으로 가는 버튼 추가 (로그인한 사용자의 경우만 가능)-->
         <a href="{% url 'write_diary' %}">
             <button>Write a New Diary</button>
