--- a/diaryapp/templates/diaryapp/user_list_diary.html
+++ b/diaryapp/templates/diaryapp/user_list_diary.html
@@ -1,4 +1,4 @@
-<!-- list_diary.html -->
+<!--로그인 한 사용자가 보는 자신의 리스트-->
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
