--- a/diaryapp/templates/diaryapp/detail_diary.html
+++ b/diaryapp/templates/diaryapp/detail_diary.html
@@ -15,14 +15,19 @@
             padding: 20px;
         }
     </style>
+
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'admin/css/nav_sidebar.css' %}">
 </head>
 <body>
+    <script src="{% static 'admin/js/nav_sidebar.js' %}"></script>
     <h1>{{ diary.diarytitle }}</h1>
     <p><strong>Place:</strong> <a href="#" class="open-modal" data-unique-diary-id="{{ diary.unique_diary_id }}">{{ diary.place }}</a></p>
     <p><strong>Withfriend:</strong> {{ diary.withfriend }}</p>
     <!-- 태그된 사용자를 보여주는 게 필요함 -->
     <p><strong>Content:</strong> {{ diary.content }}</p>
-    <p><strong>Created at:</strong> {{ diary.created_at }}</p>
+    {% load humanize %}
+    <p><strong>Created at:</strong> {{ diary.created_at|date:"Y년 n월 j일" }}</p>
 
     {% if diary.representative_image %}
         <img src="data:image/png;base64,{{ diary.representative_image.image_file }}" alt="Representative Image" width="150">
@@ -38,16 +43,28 @@
     <button>
         <a href="{% url 'list_diary' %}">리스트로 돌아가기</a>
     </button>
+    <p>diary:{{diary.user_email}}</p>
+    <p>settings:{{settings.DEFAULT_FROM_EMAIL}}</p>
 
     <!-- 수정 버튼 -->
-    <button>
-        <a href="{% url 'update_diary' unique_diary_id=diary.unique_diary_id %}">일기수정하기</a>
-    </button>
-    <!-- 삭제 버튼 -->
-    <form action="{% url 'delete_diary' unique_diary_id=diary.unique_diary_id %}" method="post">
-        {% csrf_token %}
-        <input type="submit" value="삭제하기">
-    </form>
+<!--    <div>-->
+<!--        <p>{{ user.username }}</p>-->
+<!--    </div>-->
+
+    {% if diary.user_email == settings.DEFAULT_FROM_EMAIL %}
+
+        <button>
+            <a href="{% url 'update_diary' unique_diary_id=diary.unique_diary_id %}">일기수정하기</a>
+        </button>
+
+<!-- 삭제 버튼 -->
+
+        <form action="{% url 'delete_diary' unique_diary_id=diary.unique_diary_id %}" method="post">
+            {% csrf_token %}
+            <input type="submit" value="삭제하기">
+        </form>
+
+    {% endif %}
 
     <h2>댓글</h2>
     <form method="post" action="{% url 'create_comment' diary.unique_diary_id %}">
@@ -57,10 +74,18 @@
     </form>
 
     {% for comment in diary.diary_comments.all %}
+
+
         <div>
             <p><strong>{{ comment.user_email }}:</strong> {{ comment.comment }}</p>
-            <a href="{% url 'delete_comment' diary.unique_diary_id comment.comment_id %}">댓글 삭제</a>
+            <p>{{comment.user_email}}</p>
+<!---->     {% if comment.user_email == settings.DEFAULT_FROM_EMAIL %}
+                <button>
+                <a href="{% url 'delete_comment' diary.unique_diary_id comment.comment_id %}">댓글 삭제</a>
+                </button>
+<!---->     {% endif %}
         </div>
+
     {% empty %}
         <p>댓글이 없습니다.</p>
     {% endfor %}
