--- a/Jpage/templates/Jpage/map.html
+++ b/Jpage/templates/Jpage/map.html
@@ -18,7 +18,7 @@
     <div id="map-container">
         <div id="map"></div>
     </div>
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=64ca09990c4ef115e5bdda00a2c4bc44"></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey="></script>
 <script>
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div
     mapOption = {
