--- a/diaryapp/templates/diaryapp/list_diary.html
+++ b/diaryapp/templates/diaryapp/list_diary.html
@@ -1,29 +1,36 @@
-<!--전체 다이어리 보여주는 리스트-->
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="UTF-8">
-    <title>Diary List</title>
-</head>
-<body>
-    <h1>Diary List</h1>
-    <ul>
-        {% for diary in diary_list %}
-            <li>
-                <a href="{% url 'detail_diary_by_id' unique_diary_id=diary.unique_diary_id %}">{{ diary.diarytitle }}</a>
-                <br/>
-                {% if diary.representative_image %}
-                    <img src="data:image/png;base64,{{ diary.representative_image.image_file }}" alt="Representative Image" width="150">
-                {% endif %}
-            </li>
-        {% empty %}
-            <li>No diaries found.</li>
-        {% endfor %}
-    </ul>
+{% include 'header.html' %}
+<section id="list_diary" class="list list_diary" xmlns="http://www.w3.org/1999/html">
+    <h2 class="screen_out">다이어리 리스트</h2>
+    <div class="write-container">
+        <div class="list-actions">
+            <div class="list-actions-header">
+                <h1>다이어리 목록</h1>
+            </div>
+            <div class="list-actions-buttons">
+                <button class="btn-list-action">
+                    <a href="{% url 'write_diary' %}">새 일기 작성하기</a>
+                </button>
+            </div>
+        </div>
 
-    <!-- 일기 작성 화면으로 가는 버튼 추가 (user기능이 생기면 삭제)-->
-        <a href="{% url 'write_diary' %}">
-            <button>Write a New Diary</button>
-        </a>
-</body>
-</html>
+        <hr/>
+        <br/>
+
+        <ul class="diary-grid">
+            {% for diary in diary_list %}
+                <li>
+                    {% if diary.representative_image %}
+                        <img src="data:image/png;base64,{{ diary.representative_image.image_file }}" alt="Representative Image" width="300">
+                        <br/>
+                        <a href="{% url 'detail_diary_by_id' unique_diary_id=diary.unique_diary_id %}">[{{ diary.created_at|date:"Y년 n월 j일" }}]&nbsp;&nbsp;&nbsp;{{ diary.diarytitle }}</a>
+                        <br/>
+                    {% endif %}
+                </li>
+            {% empty %}
+                <li>No diaries found.</li>
+            {% endfor %}
+        </ul>
+    </div>
+
+</section>
+{% include 'footer.html' %}
