--- a/diaryapp/templates/diaryapp/plan_modal.html
+++ b/diaryapp/templates/diaryapp/plan_modal.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% include 'header.html' %}
+<section id="diary" class="planmodal plan_modal">
+    <h2 class="screen_out">여행 다이어리 장소 모달</h2>
     <p><strong>여행 장소:</strong> {{ diary.place }}</p>
-</body>
-</html>
+</section>
+{% include 'footer.html' %}
